## 1.3 / Octorber 2011

  * Ruby 2.0 only

  * Gracefully degrade when cache store goes offline

  * allow_reload/revalidate is not enabled by default

  * Make Rack::Cache multithread friendly

## 1.2 / March 2012

  * Fix a cookie leak vulnerability effecting large numbers of Rails 3.x installs:
    https://github.com/rtomayko/rack-cache/pull/52

  * Never 304 on PUT or POST requests.

  * Misc bundler and test tooling fixes.

## 1.1 / September 2011

  * Allow (INM/IMS) validation requests through to backend on miss. Makes it
    possible to use validation for private / uncacheable responses. A number of
    people using Rails's stale?() helper reported that their validation logic was
    never kicking in.

  * Add rack env rack-cache.force-pass option to bypass rack-cache on
    per request basis

  * Fix an issue with memcache namespace not being set when using the
    :namespace option instead of :prefix_key.

  * Fix test failures due to MockResponse changes in recent Rack
    version (issue #34)

## 1.0.3 / August 2011

  * Fix bug passing options to memcached and dalli

  * Document cache_key

## 1.0.1 / April 2011

  * Added lib/rack-cache.rb to match package name for auto-requiring machinery.

  * Fixed a number of issues caused by Rack::Cache not closing the body received
    from the application. Rack::Lock and other middleware use body.close to
    signal the true end of request processing so failure to call this method
    can result in strange issues (e.g.,
    "ThreadError: deadlock; recursive locking")

  * Fixed a bug where Rack::Cache would blow up writing the rack env to the meta
    store when the env contained an all uppercase key whose value wasn't
    marshalable. Passenger and some other stuff write such keys apparently.

  * The test suite has moved from test-spec to bacon. This is a short term
    solution to the problem of not being able to run tests under Ruby 1.9.x.