@@ -286,18 +286,20 @@ describe 'Rack::Cache::MetaStore' do
       behaves_like 'A Rack::Cache::MetaStore Implementation'
     end
 
-    describe 'options parsing' do
-      before do
-        uri = URI.parse("memcached://#{ENV['MEMCACHED']}/meta_ns1?show_backtraces=true")
-        @memcached_metastore = Rack::Cache::MetaStore::MemCached.resolve uri
-      end
+    not_java 'uses an implementation detail of the memcached gem' do
+      describe 'options parsing' do
+        before do
+          uri = URI.parse("memcached://#{ENV['MEMCACHED']}/meta_ns1?show_backtraces=true")
+          @memcached_metastore = Rack::Cache::MetaStore::MemCached.resolve uri
+        end
 
-      it 'passes options from uri' do
-        @memcached_metastore.cache.instance_variable_get(:@options)[:show_backtraces].should.equal true
-      end
+        it 'passes options from uri' do
+          @memcached_metastore.cache.instance_variable_get(:@options)[:show_backtraces].should.equal true
+        end
 
-      it 'takes namespace into account' do
-        @memcached_metastore.cache.instance_variable_get(:@options)[:prefix_key].should.equal 'meta_ns1'
+        it 'takes namespace into account' do
+          @memcached_metastore.cache.instance_variable_get(:@options)[:prefix_key].should.equal 'meta_ns1'
+        end
       end
     end
   end
@@ -313,18 +315,20 @@ describe 'Rack::Cache::MetaStore' do
       behaves_like 'A Rack::Cache::MetaStore Implementation'
     end
 
-    describe 'options parsing' do
-      before do
-        uri = URI.parse("memcached://#{ENV['MEMCACHED']}/meta_ns1?show_backtraces=true")
-        @dalli_metastore = Rack::Cache::MetaStore::Dalli.resolve uri
-      end
+    not_java 'uses an implementation detail of the memcached gem' do
+      describe 'options parsing' do
+        before do
+          uri = URI.parse("memcached://#{ENV['MEMCACHED']}/meta_ns1?show_backtraces=true")
+          @dalli_metastore = Rack::Cache::MetaStore::Dalli.resolve uri
+        end
 
-      it 'passes options from uri' do
-        @dalli_metastore.cache.instance_variable_get(:@options)[:show_backtraces].should.equal true
-      end
+        it 'passes options from uri' do
+          @dalli_metastore.cache.instance_variable_get(:@options)[:show_backtraces].should.equal true
+        end
 
-      it 'takes namespace into account' do
-        @dalli_metastore.cache.instance_variable_get(:@options)[:namespace].should.equal 'meta_ns1'
+        it 'takes namespace into account' do
+          @dalli_metastore.cache.instance_variable_get(:@options)[:namespace].should.equal 'meta_ns1'
+        end
       end
     end
   end
@@ -345,7 +349,7 @@ describe 'Rack::Cache::MetaStore' do
     end
 
     describe 'GAEStore' do
-      before :each do
+      before do
         Rack::Cache::AppEngine::MC::Service.clear
         @store = Rack::Cache::MetaStore::GAEStore.new
         @entity_store = Rack::Cache::EntityStore::Heap.new
