@@ -1,3 +1,7 @@
+## Next
+
+  * Fix support for JRuby
+
 ## 1.3 / Octorber 2011
 
   * Ruby 2.0 only
